Adicionando os ids em cada elemento html para deixar a navegação interna mais suave

--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
         <nav class="nav">
             <ul class="nav-list">
                 <li>
-                    <a href="#">Home</a>
+                    <a href="#home">Home</a>
                 </li>
                 <li>
-                    <a href="#">Sobre</a>
+                    <a href="#sobre">Sobre</a>
                 </li>
                 <li>
-                    <a href="#">Projetos</a>
+                    <a href="#projetos">Projetos</a>
                 </li>
             </ul>
         </nav>
     </header><!--FIM DO HEADER-->
 
 
-    <section class="main"><!--INICIO DA MAIN-->
+    <section id="home" class="main"><!--INICIO DA MAIN-->
         <h1>Olá,<br> Seja bem-vindo(a)!</h1>
         <p>Soluções para o seu negócio.</p>
         <a href="#"><button class="btn-main">Veja os meus projetos! 📗💻</button></a>
     </section><!--FIM DA MAIN-->
 
 
-    <section class="sobre"><!--INICIO DO SOBRE-->
+    <section id="sobre" class="sobre"><!--INICIO DO SOBRE-->
         <div>
             <h2>Sobre</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit dignissimos eius tempora debitis non. Possimus adipisci id blanditiis in! Perferendis laboriosam culpa alias facilis facere aliquam amet ipsa rem in? Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati sed ducimus quos doloribus facere tempore, ut in provident exercitationem autem et dolore perferendis quasi aut eius ab laboriosam. Alias, eum. <br><br>
@@ -45,7 +45,7 @@
         <img src="images/Pedro Lucas.jpeg" alt="programador">
     </section><!--FIM DO SOBRE-->
 
-    <section class="projetos"><!--INICIO DOS MEUS PROJETOS-->
+    <section id="projetos" class="projetos"><!--INICIO DOS MEUS PROJETOS-->
        
         <h2>Meus projetos</h2>
         <p>Estes são os projetos criados por mim</p>
