Linkando o botão do conheça meus projetos com a sessão de projetos

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section id="home" class="main"><!--INICIO DA MAIN-->
         <h1>Olá,<br> Seja bem-vindo(a)!</h1>
         <p>Soluções para o seu negócio.</p>
-        <a href="#"><button class="btn-main">Veja os meus projetos! 📗💻</button></a>
+        <a href="#projetos"><button class="btn-main">Veja os meus projetos! 📗💻</button></a>
     </section><!--FIM DA MAIN-->
 
 
